@@ -20,9 +20,12 @@
 package org.neo4j.cypher.internal.parser.v1_8
 
 import org.neo4j.cypher.internal.commands._
+import org.neo4j.cypher.SyntaxException
 
 trait Expressions extends Base with ParserPattern with Predicates with StringLiteral {
-  def expression: Parser[Expression] = term ~ rep("+" ~ term | "-" ~ term) ^^ {
+  def expression: Parser[Expression] =
+
+    term ~ rep("+" ~ term | "-" ~ term) ^^ {
     case head ~ rest =>
       var result = head
       rest.foreach {
@@ -86,7 +89,10 @@ trait Expressions extends Base with ParserPattern with Predicates with StringLit
   def createProperty(entity: String, propName: String): Expression
 
   def nullableProperty: Parser[Expression] = (
-    property <~ "?" ^^ (p => new Nullable(p) with DefaultTrue) |
+    property ~> "!=" ^^^ (throw new SyntaxException("Cypher does not support != for inequality comparisons. " +
+      "It's used for nullable properties instead.\n" +
+      "You probably meant <> instead. Read more about this in the operators chapter in the manual.")) |
+      property <~ "?" ^^ (p => new Nullable(p) with DefaultTrue) |
       property <~ "!" ^^ (p => new Nullable(p) with DefaultFalse))
 
   def extract: Parser[Expression] = ignoreCase("extract") ~> parens(identity ~ ignoreCase("in") ~ expression ~ ":" ~ expression) ^^ {
